@@ -1,4 +1,5 @@
 01 Aug 2018
+fix: typo lang_torrenttable_functions.php
 fix: use correct key for userid news.php
 
 31 Jul 2018
